# protocol-lab

./: .gitignore  README.md  buf.gen.yaml
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py  mcp_server.py
backend/app/api/v1/: __init__.py  auth.py  boards.py  comments.py  deps.py  tags.py  tasks.py  webhooks.py
backend/app/core/: config.py  errors.py  ratelimit.py  security.py
backend/app/db/: base.py  session.py
backend/app/graphql/: context.py  loaders.py  schema.py  types.py
backend/app/models/: __init__.py  task_board.py  webhooks.py
backend/app/realtime/: bus.py  events.py  router.py
backend/app/rpc/: __init__.py  server.py
backend/app/schemas/: auth.py  board.py  comment.py  common.py  tag.py  task.py  webhook.py
backend/app/services/: auth.py  boards.py  comments.py  exceptions.py  tags.py  tasks.py  webhooks.py
backend/app/webhooks/: dispatch.py  security.py  worker.py
backend/scripts/: check_db.py
backend/tests/: conftest.py  test_graphql.py  test_health.py  test_mcp.py  test_models.py  test_realtime.py  test_rest_integration.py  test_rpc.py  test_webhooks.py
docs/: DESIGN_BRIEF.md
frontend/: .env.local.example  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ApiKeyMaker.tsx  AuthBar.tsx  GetStarted.tsx  Shell.tsx
frontend/app/components/playground/: Pipeline.tsx  hl.tsx  ui.tsx
frontend/app/graphql/: page.tsx
frontend/app/grpc/: page.tsx
frontend/app/mcp/: page.tsx
frontend/app/realtime/: page.tsx
frontend/app/reference/: route.ts
frontend/app/rest/: page.tsx
frontend/app/rest-vs-graphql/: page.tsx
frontend/app/webhooks/: page.tsx
frontend/lib/: api.ts
proto/protocollab/v1/: greet.proto
