[project]
name = "protocol-lab-backend"
version = "0.1.0"
description = "Protocol Lab — jeden zbiór danych przez wszystkie paradygmaty API (REST, GraphQL, gRPC/Connect, WebSocket, SSE, webhooki, MCP)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "connectrpc>=0.10.1",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "fastapi-pagination>=0.15.15",
    "fastmcp>=3.4.2",
    "greenlet>=3.5.2",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "strawberry-graphql[fastapi]>=0.319.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["app/rpc/gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: wywołania w domyślnych argumentach — standardowy idiom FastAPI (Depends(), Query()...)
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]
